load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# The standard Gravis UltraSound instrument patches (.PAT), as originally
# distributed with the GUS drivers and long redistributed as dgguspat.zip
# (idgames /music/dgguspat, packaged by Simon Howard — see dgguspat.txt).
# Ships at C:\ULTRASND\MIDI, the ULTRADIR default every GUS-native game and
# driver (Doom's DMX, AIL, ULTRAMID) loads instrument data from — without
# these, games detect the emulated GUS but silently disable music.
_PATS = glob(["MIDI/*.pat"])

pkg_tar(
    name = "tar",
    files = {":" + p: "ULTRASND/" + p.upper() for p in _PATS} | {
        ":dgguspat.txt": "ULTRASND/DGGUSPAT.TXT",
    },
    visibility = ["//visibility:public"],
)
