genrule(
    name = "hello_com",
    srcs = ["hello.asm"],
    outs = ["HELLO.COM"],
    cmd = "nasm -f bin -o $@ $<",
    visibility = ["//visibility:public"],
)

genrule(
    name = "command_com",
    srcs = ["command.asm"],
    outs = ["COMMAND.COM"],
    cmd = "nasm -f bin -o $@ $<",
    visibility = ["//visibility:public"],
)

exports_files(
    ["TEST.COM", "TEST.BAT"],
    visibility = ["//visibility:public"],
)
