load("@rules_rust//rust:defs.bzl", "rust_static_library")

rust_static_library(
    name = "shell_lib",
    srcs = ["src/main.rs"],
    crate_name = "shell",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Crelocation-model=static",
        "-Cforce-frame-pointers=yes",
    ],
    deps = ["//crt"],
)

genrule(
    name = "shell_elf",
    srcs = [":shell_lib", "//crt:user.ld"],
    outs = ["shell.elf"],
    cmd = "ld.lld -m elf_i386 -T $(location //crt:user.ld) -o $@ $(location :shell_lib)",
    visibility = ["//visibility:public"],
)
