load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//toolchain:musl_transition.bzl", "musl_binary")

rust_binary(
    name = "shell_bin",
    srcs = ["src/main.rs"],
    edition = "2024",
    rustc_flags = ["-Copt-level=s", "-Cstrip=symbols", "-Clinker-flavor=ld.lld", "-Clinker=rust-lld", "-Ctarget-feature=-sse,-sse2"],
)

musl_binary(
    name = "shell_elf",
    binary = ":shell_bin",
    visibility = ["//visibility:public"],
)
