exports_files(
    [
        "AUDIOHED.WL6",
        "AUDIOT.WL6",
        "CONFIG.WL6",
        "GAMEMAPS.WL6",
        "MAPHEAD.WL6",
        "VGADICT.WL6",
        "VGAGRAPH.WL6",
        "VGAHEAD.WL6",
        "VSWAP.WL6",
        "WOLF3D.EXE",
    ],
    visibility = ["//visibility:public"],
)
