# Build bootloader using rules_rust and rules_nasm
load("@rules_rust//rust:defs.bzl", "rust_static_library")
load("@rules_nasm//nasm:defs.bzl", "nasm_library")

nasm_library(
    name = "mbr",
    srcs = ["mbr.asm"],
    copts = ["-f", "elf32"],
)

rust_static_library(
    name = "boot",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "boot",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Copt-level=z",
        "-Crelocation-model=static",
    ],
    deps = ["//lib"],
)

genrule(
    name = "bootloader_elf",
    srcs = [":mbr", ":boot", "bootloader.ld"],
    outs = ["bootloader.elf"],
    cmd = "ld -m elf_i386 -T $(location bootloader.ld) $(location :mbr) $(location :boot) -o $@",
)

genrule(
    name = "bootloader_bin",
    srcs = [":bootloader_elf"],
    outs = ["bootloader.bin"],
    cmd = "objcopy -O binary $< $@",
    visibility = ["//visibility:public"],
)
